@@ -1,3 +1,10 @@
+1999-07-22  Michael Hanni  <mhanni@sprintmail.com>
+
+	* Source/NSMenuView.m: some fixes to get things to work correctly
+	when calling menu item actions. Also autoenable should be working
+	a little better.
+	* Source/NSMenuItemCell.m: drawing fixes for disabled cells.
+
 1999-07-20  Michael Hanni  <mhanni@sprintmail.com>
 
 	* Source/NSMenuView.m: trackEvent: fixed problems that existed for
